2011-02-21 Dominique Dumont  <domi.dumont@free.fr> 1.234
    
    * factor out comment extraction: code that retrieve comments and tie it to 
      actual config data is generic. Now this is handled by 
      C::M::B::Any::associates_comments_with_data
    * factored out comment writing in C::M::B::Any::write_global_comments
      and C::M::B::Any::write_data_and_comments
    * Fix bad handling of leaf type Ini backend (Thanks Krzysztof for the notice)
    
    TODO:
    - make warp skip warp master if they cannot be found with !SomeClass
    - Auto test of synopsises

    * Application changes:
        * dpkg control source model: Encourage Standard-Vesrion 3.9.1
        * dpkg copyright: Handle license in header (Closes Debian #614776)
        
    * Framework changes:
        * WarpedThing: Can warp based on the location in a tree. For instance to make
        an element mandatory in one place and not in another. Used by Debian copyright model

2011-02-11 Dominique Dumont  <domi.dumont@free.fr> 1.233
    
    * Application changes:
        * dpkg control source model: Added DM-Upload-Allowed and all Vcs-* tags defined 
        in Debian reference guide (Thanks Peter Pentchev for the patch)
          (Fix RT 65575)
        
    * Framework changes:
        * Backend Ini file: Fixed comment handling
        * All modules: Improved synopsis. You can now save them in a file and 
          have a working program
        * Remove crappy handling of comments in load_data methods. 
        * DumpAsData: Write annotations as pod in method dump_annotations_as_pod
        * Anything: load_pod_annotation load annotations from a pod document 
        * Instance write back: now correctly call all write_back when several
          nodes in model needs to be called back

2011-01-30 Dominique Dumont  <domi.dumont@free.fr> 1.232

    * Added missing Text::Autoformat dependency

2011-01-30 Dominique Dumont  <domi.dumont@free.fr> 1.231

    * Application changes: